--- a/render.yaml
+++ b/render.yaml
@@ -12,3 +12,8 @@ services:
         generateValue: true
       - key: NODE_ENV
         value: production
+
+  # 你的 PostgreSQL 数据库
+  - type: psql
+    name: photo-timeline-db
+    plan: free
